--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container" id="container"></div>
+    <div class="credits">Developed by Joy Patel</div>
     <script src="script.js"></script>
   </body>
 </html>
